Fix tally page overlapping elements

--- a/components/turf/turf.css
+++ b/components/turf/turf.css
@@ -179,6 +179,7 @@
     overflow: hidden;
     padding-right: 2mm;
     text-align: right;
+    min-width: 0;
 }
 
 .tallyCount {
